# karls-standard-library

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt  algorithms_demo.cpp  basic_demo.cpp
include/karls_standard_library/: algorithm.hpp  array.hpp  cstddef.hpp  cstring.hpp  functional.hpp  initializer_list.hpp  karls_standard_library.hpp  limit.hpp  map.hpp  memory.hpp  set.hpp  string.hpp  type_traits.hpp  unordered_map.hpp  utility.hpp  vector.hpp
include/karls_stl/: karls_stl.hpp  type_traits.hpp  utility.hpp
tests/: CMakeLists.txt  main.cpp  test_algorithms.cpp  test_array.cpp  test_list.cpp  test_memory.cpp  test_string.cpp  test_utility.cpp  test_vector.cpp
