add_executable(basic_demo basic_demo.cpp)
target_link_libraries(basic_demo karls_standard_library)

add_executable(algorithms_demo algorithms_demo.cpp)
target_link_libraries(algorithms_demo karls_standard_library)

add_executable(performance_comparison performance_comparison.cpp)
target_link_libraries(performance_comparison karls_standard_library)